--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-scripts": "5.0.1",
+    "swiper": "^11.2.5",
     "tailwindcss": "^4.0.14",
     "web-vitals": "^2.1.4"
   },
